# pracpy

./: CMakeLists.txt  LICENSE  pyproject.toml
.github/workflows/: build.yml
src/pracpy/: __init__.py  _core.cpp
tests/: test_decay.py  test_ra_decay.py
