[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12", "numpy>=1.22"]
build-backend = "scikit_build_core.build"

[project]
name = "pracpy"
version = "0.1.0"
description = "Physics & chemistry paper simulations"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
dev = ["pytest", "matplotlib>=3.5"]

[project.urls]
Homepage = "https://github.com/cypher-purg/pracpy"
Repository = "https://github.com/cypher-purg/pracpy"

[tool.scikit-build]
wheel.packages = ["src/practicals"]
cmake.build-type = "Release"

[tool.cibuildwheel]
build          = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip           = "*-musllinux*"
before-build   = "pip install numpy pybind11"
test-requires  = ["pytest", "numpy"]
test-command   = "pytest {project}/tests -v"

[tool.pytest.ini_options]
testpaths = ["tests"]
